--- a/app/views/courses/timetable.xlsx.erb
+++ b/app/views/courses/timetable.xlsx.erb
@@ -9,7 +9,7 @@
 
 <% time_slot = ['6:00 ~ 6:50','7:00 ~ 7:50','8:00 ~ 8:50','9:00 ~ 9:50','10:10 ~ 11:00','11:10 ~ 12:00','12:20 ~ 13:10','13:20 ~ 14:10','14:20 ~ 15:10','15:30 ~ 16:20','16:30 ~ 17:20','17:30 ~ 18:20','18:30 ~ 19:20','19:30 ~ 20:20','20:30 ~ 21:20','21:30 ~ 22:20']%>
 <% time_en = ['M','N','A','B','C','D','X','E','F','G','H','Y','I','J','K','L']%> 
-<% header = ["節次","時間/星期","Mon","Tue","Wed","Thu","Fri"]%>
+<% header = ["節次","時間/星期","Mon","Tue","Wed","Thu","Fri","Sat"]%>
 
 <table colspan="5" cellpadding="5" border="1" width="600" class="text-family">
 	<tr>
@@ -27,6 +27,7 @@
         <%=check_course(@course_details,3,font[0])%>
         <%=check_course(@course_details,4,font[0])%>
         <%=check_course(@course_details,5,font[0])%>
+				<%=check_course(@course_details,6,font[0])%>
       </tr>
 <% end %>
 </table>
