--- a/app/views/user/import_course_2.html.erb
+++ b/app/views/user/import_course_2.html.erb
@@ -15,7 +15,7 @@
 
 <script>
 $(document).ready(function(){
-	$.getJSON("/user/statistics2", function (data) {
+	$.getJSON("/user/statistics", function (data) {
 		<% if current_user.is_undergrad %>
 		$("#common_check_div").html(tmpl("common_check",data));
 		<% end %>
