--- a/app/views/user/statistics.html.erb
+++ b/app/views/user/statistics.html.erb
@@ -2,23 +2,20 @@
 	<div class="panel-heading" >
 		<h4 class="text-center">畢業學分計算</h4>
 	</div>
-	
-	<br>
+	</br>
+	 
 	<div id="common_check_div" class="container">
 	</div>
-	<div id="cosmap_check_div" class="container">
-	</div>
-	<div id="course_list" class="">
-	</div>
+	<div id="cosmap_check_div" class="container"></div>
+	<div id="course_list" class=""><div class="text-center"><%=fa_icon "refresh spin 2x"%></div></div>
 </div>
+
 <div class="modal fade" id="courselist_modal" tabindex="-1" role="dialog" aria-hidden="true" >
-	<div class="modal-dialog" >
-		
+	<div class="modal-dialog" >	
 			<!--<div class="modal-footer">
 				<button type="button" class="btn btn-primary">Purchase</button>
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 			</div>-->
-
 	</div>
 </div>
 
