--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 ﻿<div class="navbar navbar-inverse navbar-fixed-bottom " style="min-height:35px;">
 	<div class="container" >
-		<p class="navbar-text pull-left footer-text">© 2014 NCTU<sup>+</sup>交大網頁及系統優化小組
+		<p class="navbar-text pull-left footer-text">© 2014 NCTU<sup>+</sup><!--交大網頁及系統優化小組-->
 		<a href="#" data-toggle="modal" data-target="#global_modal" onclick="contactus();" style="margin-left:10px;">Contact Us</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;建議使用Chrome或FireFox瀏覽本站
 		</p>
