--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -41,10 +41,10 @@
 </div>
 
 
-	<div class="col-md-11" style="position:absolute;margin-top:30%;margin-bottom:3%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000; ">
-		<div class="row">
+	<div class="col-md-12" style="position:absolute;margin-top:30%;margin-bottom:3%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000; ">
+		<div class="row" style="">
 		
-			<div class="container icon-container" style="margin-left:30%;" >
+			<div class="container icon-container col-md-offset-4 col-sm-offset-2" >
 				<div class="row row-margin" >
 				<div class="circle clickable-hover" href="/courses/">
 					<%=fa_icon "search 5x" %>
@@ -60,7 +60,7 @@
 					<%=fa_icon "file-text-o 5x" %>
 					
 				</div>
-				<p class="text-center function-desc" >找考古題</p>
+				<p class="text-center function-desc" >找心得</p>
 
 				</div>
 			</div>
