--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -13,11 +13,14 @@
 	}
 	function search_by_text(){
 		clean_input($("#dept_div"));
-		clean_input($("#sem_div"));
+		//clean_input($("#sem_div"));
 		$('#course_detail_search').submit();
 	}
-	function search_by_select(){
-		clean_input($("#text_div"));
+	function search_by_select(obj){
+		//alert(obj.attr("id"));
+		if(obj.attr("id")=="q_department_id_eq")
+			clean_input($("#text_div"));
+		
 		$('#course_detail_search').submit();
 	}
 	$(document).ready(function(){
