--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,14 +7,14 @@
 	
 	<div class="col-sm-1 col-md-offset-3 no-padding-left">
 		<div id="sem_div" class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
-		<%= f.select :semester_id_eq, options_from_collection_for_select(Semester.all.reverse, "id", "name", @q.semester_id_eq),{:prompt=> "學期"},{ :class=> "form-control",:onchange=>"search_by_select();"} %>
+		<%= f.select :semester_id_eq, options_from_collection_for_select(Semester.all.reverse, "id", "name", @q.semester_id_eq),{:prompt=> "學期"},{ :class=> "form-control",:onchange=>"search_by_select($(this));"} %>
 	</div>
 	<div class="col-sm-1 no-padding-left">
 		<%= select_tag "degree" ,options_for_select([['大學部','3'],['研究所','2'],['大學部共同','0']],params[:degree]), prompt: "分類", class: "form-control",:onchange=>"change_degree($(this))" %>
 	</div>	
 	<div class="col-sm-2 no-padding-left ">
 		<div id="dept_div" class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
-		<%= f.select :department_id_eq, options_from_collection_for_select(Department.searchable, "id", "ch_name", @q.department_id_eq),{:prompt=> "系所"},{ :class=> "form-control",:onchange=>"search_by_select();"} %>
+		<%= f.select :department_id_eq, options_from_collection_for_select(Department.searchable, "id", "ch_name", @q.department_id_eq),{:prompt=> "系所"},{ :class=> "form-control",:onchange=>"search_by_select($(this));"} %>
 	</div>
 	
 	<div class="col-sm-2">
