--- a/app/views/file_infos/_template_download.html.erb
+++ b/app/views/file_infos/_template_download.html.erb
@@ -28,11 +28,7 @@
 	{%= file.description %}
 	</td>
 	<td class="name">
-	<% if current_user %>
-	  <a href="{%=file.url%}" onclick="add_count({%=file.id%});" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
-	<% else %>
-	  <a href="javascript: void(0)" title="{%=file.name%}" onclick='window.alert("請先登入!");'>{%=file.name%}</a>
-	<% end %>
+	  <a href="{%=file.url%}" title="{%=file.name%}">{%=file.name%}</a>
 	</td>
 	
 	
