add reg_num to course search and show

--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "course_content", "data-turbolinks-track" => true %>
+
 <div id="container" style="min-width: 310px; height: 400px; max-width: 800px; margin: 0 auto"></div>
 <hr>
 <table class="table" id="dataTables-paginate">
