--- a/app/views/course_maps/show.html.erb
+++ b/app/views/course_maps/show.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "coursemap_manage", "data-turbolinks-track" => true %>
+
 <h3>課程地圖 - <%=@course_map.name%></h3>  
 
 <div class="well">
