--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "course_content", "data-turbolinks-track" => true %>
+
 <div class="row">
 	
 	<div class="col-md-9 scroll-content col-md-offset-1">
