--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,11 +53,11 @@
 			<ul class="nav navbar-nav navbar-right">			
 		<% if current_user %>
 				<li>
-					<a class="no-padding-bottom"><%= fa_icon("shopping-cart 2x", :class=>"masterTooltip clickable-hover", :id=>"cart_but", :title=>"觀察名單") %></a>
+					<a class="no-padding-bottom"><%= fa_icon("shopping-cart 2x", :class=>"toolTip clickable-hover", :id=>"cart_but", :title=>"觀察名單") %></a>
 				</li>
 				<li>
 
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= fa_icon("calendar 2x", :id=>"sm_schd_button")%></a>
+					<a href="#" class="toolTip dropdown-toggle toolTip" data-toggle="dropdown" title="課表"><%= fa_icon("calendar 2x", :id=>"sm_schd_button")%></a>
 						<ul class="dropdown-menu">
 							<li id="small_timetable"></li>
 						</ul>
