--- a/app/views/main/test.html.erb
+++ b/app/views/main/test.html.erb
@@ -1,1 +1,67 @@
-<%=@response.to_s%>
+<style>
+	/*.tabl {
+    border-collapse: collapse;
+    border-style: hidden;
+	}
+	.tabl td, .tabl th {
+			border: 1px solid black;
+	}*/
+</style>
+
+<div class="" style="background-color:#fff">
+1.評分高的/平均分數高的
+2.塞空堂
+3.學長/同學的課
+4.還沒滿的課
+5.被當的課
+6.爆滿的課
+<table class="tabl" style="border:1px solid #ccc;">
+<tr class="" style="">
+	<td>
+		
+			<button class="btn btn-default"><%=fa_icon "calendar 2x"%></button>
+		
+	</td>
+	<td>
+		
+			<button class="btn btn-default">
+				<%=fa_icon "check 2x"%>
+				<!--<span class="glyphicon glyphicon-ok"></span>-->
+			</button>
+		
+	</td>
+	<td>
+		
+			<button class="btn btn-default"><%=fa_icon "heart-o 2x"%></button>
+		
+	</td>
+	<td>
+		
+			<button class="btn btn-default"><%=fa_icon "users 2x"%></button>
+		
+	</td>
+</tr>
+<tr class="">
+	<td>
+		
+			<button class="btn btn-default"><%=fa_icon "book 2x"%></button>
+		
+	</td>
+	<td>
+		
+			<button class="btn btn-default"><%=fa_icon "book 2x"%></button>
+		
+	</td>
+	<td>
+		
+			<button class="btn btn-default"><%=fa_icon "book 2x"%></button>
+		
+	</td>
+	<td>
+		
+			<button class="btn btn-default"><%=fa_icon "book 2x"%></button>
+		
+	</td>
+</tr>
+</.tabl>
+</div>
