--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -43,6 +43,7 @@
 		<!--<th class="col-md-4">備註</th>-->
 		<th class="col-md- text-center"><%= sort_link @q,:grade, "年級" %>/<%= sort_link @q,:time, "時間" %></th>
 		<th class="col-md- text-center"><%= sort_link @q,:credit, "學分" %></th>
+		<th class="col-md- text-center"><%= sort_link @q,:credit, "修課人數/上限" %></th>
 		<th class="col-md- text-center">文章/檔案數</th>
 		<th class="col-md- text-center">人氣</th>
 		<!--<th class="col-md-1"></th>-->
@@ -67,6 +68,9 @@
 					<!--<td><%= cd.memo %></td>-->
 					<td class="text-center"><%= cd.grade %>/<%= cd.time %></td>
 					<td class="text-center"><%= cd.course_credit %></td>
+					<td class="text-center">
+					<%= cd.reg_num %>/<%=cd.students_limit.to_i==9999 ? "不限" : cd.students_limit%>
+					</td>
 					<td class="text-center"><%= "#{cd.discusses.count}/#{cd.file_infos.count}" %></td>
 					<td class="text-center"><%= cd.view_times %></td>
 				</tr>
