suggest time and dimension ver1

--- a/app/views/courses/search/_results_mini.html.erb
+++ b/app/views/courses/search/_results_mini.html.erb
@@ -22,6 +22,8 @@
 		<div class="col-sm-offset-1 col-sm-7 no-padding-left ">
 			<div id="text_div" class="cleaninput" onclick='clean_input($(this))'><%=fa_icon "times"%></div>
 			<%=text_field_tag :custom_search,params[:custom_search], class: "form-control",placeholder:"課名/老師/時間/向度" %>
+			<%=hidden_field_tag :dimension_search,"" %>
+			<%=hidden_field_tag :timeslot_search,"" %>
 		</div>		
 		<div class="col-sm-2 no-padding-left" style="//margin-top:-20px;">
 			<button class="btn btn-primary" onclick="search_by_text();"><%=fa_icon "search"%></button>
@@ -29,7 +31,8 @@
 	</div>
 <% end %>
 
-<div class="scrollable"></div>
+<div class="scrollable">
+</div>
 
 
 
