--- a/app/views/courses/course_table/_xtmpl_course_table.html.erb
+++ b/app/views/courses/course_table/_xtmpl_course_table.html.erb
@@ -21,7 +21,7 @@
 			<tr>
 				<th id="time_{%=t %}" class="schedule-grid"><p class="text-center">{%=t %}</p></th>
 				{% for(var j=1; j<=days.length; ++j){ %}
-					<td id="day_{%=j %}_time_{%=t %}" class="schd-slot-empty pos-relative" ></td>
+					<td id="day_{%=j %}_time_{%=t %}" class="schd-slot-empty pos-relative tslt" ></td>
 				{% } %}
 			</tr>
 
@@ -56,6 +56,7 @@ function add_time_slot(courses, isLastest, isSmallTable){
 				if(isSmallTable) row_id += "_sm" ;
 				$(row_id).removeClass("schd-slot-empty"); // remove old color
 				$(row_id).addClass(courses[i].class); //add color
+				$(row_id).removeClass('tslt');// remove selectable tag
 				var html_content = courses[i].name ;
 				if(isLastest){ //add delete button if in lastest semester 
 					html_content+='<div class="course-clean" id="'+plan_id+'_div'+
@@ -111,6 +112,7 @@ function del_course(cd_id){
 						$(row_id).css("background-color","#FFFFFF");
 						$(row_id).html('') ;
 						$(row_id).popover('disable');
+						$(row_id).addClass('tslt');
 					}
 				}	
 				//$("#has-select-btn").click();
