--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -14,7 +14,9 @@
 	function search_by_text(){
 		clean_input($("#dept_div"));
 		//clean_input($("#sem_div"));
-		$('#course_detail_search').submit();
+		
+		//$('#course_detail_search').submit();
+		
 	}
 	function search_by_select(obj){
 		//alert(obj.attr("id"));
@@ -25,6 +27,6 @@
 	}
 	$(document).ready(function(){
 		change_degree($("#degree"));
-		$("#q_department_id_eq").val('<%=@q.department_id_eq%>');
+		//$("#q_department_id_eq").val('<%=@q.department_id_eq%>');
 	});
 </script>
