--- a/app/views/courses/_comment_list.html.erb
+++ b/app/views/courses/_comment_list.html.erb
@@ -27,6 +27,6 @@
 <%end%>	
 </table>
 <%else%>
-<p class="text-center"><strong>尚無討論</strong></p>
+<p class="text-center no-comment"><strong>尚無討論</strong></p>
 
 <%end%>
