--- a/app/views/courses/show_compare.html.erb
+++ b/app/views/courses/show_compare.html.erb
@@ -85,7 +85,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-sm-6 col-md-5 col-sm-offset-1">
-								<h4><a href="/courses/{%=ct.id%}">{%=ct.name%}</a></h4>
+								<h4><a href="/courses/{%=ct.cd_id%}">{%=ct.name%}</a></h4>
 							</div>
 							<div class="text-right" id="best_{%=ct.id%}">
 								<h4></h4>
