--- a/app/views/courses/search/course_map.js.erb
+++ b/app/views/courses/search/course_map.js.erb
@@ -1,3 +1,3 @@
 $('#components').html('<%= loading_img %>');
-$('#components').html('<%=j render "group_results_mini" %>');
+$('#components').html('<%=j render "courses/search/cm_results_mini" %>');
 
